src-tauri/compile_errors_v29.txt
cargo :     Checking 
qurancaption v3.3.0 (C
:\Users\techo\Desktop\
QuranCaption\src-tauri
)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 
compile_errors_v29.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng qu...tion\src-    
tauri):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0425]: cannot 
find value 
`ACTIVE_STREAMS` in 
this scope
    --> src\exporter.r
s:1386:27
     |
1386 |         let 
mut streams = ACTIVE_S
TREAMS.lock().map_err(
|e| e.to_string())?;
     |                
           
^^^^^^^^^^^^^^ not 
found in this scope

warning: unused 
import: 
`std::sync::Arc`
 --> 
src\renderer.rs:1:5
  |
1 | use 
std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: 
`tokio::sync::Mutex 
as TokioMutex`
 --> 
src\renderer.rs:2:5
  |
2 | use 
tokio::sync::Mutex as 
TokioMutex;
  |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`Resolution`, 
`Weight`, and 
`cosmic_text::Align`
 --> 
src\renderer.rs:6:73
  |
6 | ...FontSystem, 
Metrics, Resolution, 
Shaping, SwashCache, 
TextAtlas, TextArea, 
TextBounds, Weight, 
cosmic_text::Align};
  |                   
      ^^^^^^^^^^      
                      
                      
      ^^^^^^  
^^^^^^^^^^^^^^^^^^

error[E0061]: this 
function takes 15 
arguments but 16 
arguments were 
supplied
    --> 
src\exporter.rs:1287:5
     |
1287 |     start_strea
ming_export(
     |     
^^^^^^^^^^^^^^^^^^^^^^
...
1290 |         
imgs_folder_resolved,
     |         
-------------------- 
unexpected argument 
#3 of type 
`std::string::String`
     |
note: function 
defined here
    --> src\exporter.r
s:1588:14
     |
1588 | pub async fn st
art_streaming_export(
     |              
^^^^^^^^^^^^^^^^^^^^^^
help: remove the 
extra argument
     |
1289 -         
out_path_str_for_task,
1290 -         
imgs_folder_resolved,
1289 +         
out_path_str_for_task,
     |

error[E0282]: type 
annotations needed
    --> src\exporter.r
s:1386:58
     |
1386 |         let 
mut streams = ACTIVE_S
TREAMS.lock().map_err(
|e| e.to_string())?;
     |                
                      
                    ^ 
 - type must be known 
at this point
     |
help: consider giving 
this closure 
parameter an explicit 
type
     |
1386 |         let 
mut streams = ACTIVE_S
TREAMS.lock().map_err(
|e: /* Type */| 
e.to_string())?;
     |                
                      
                     
++++++++++++

warning: variable 
does not need to be 
mutable
    --> 
src\exporter.rs:1510:9
     |
1510 |     let mut 
child = cmd.spawn()
     |         
----^^^^^
     |         |
     |         help: 
remove this `mut`
     |
     = note: 
`#[warn(unused_mut)]` 
(part of 
`#[warn(unused)]`) on 
by default

error[E0308]: `match` 
arms have 
incompatible types
   --> 
src\exporter.rs:197:23
    |
192 |           let 
output = match 
Command::new(exe)
    |  _______________
_______-
193 | |             .a
rgs(&["-hide_banner", 
"-encoders"])
194 | |             
.output()
195 | |         {
196 | |             
Ok(output) => output,
    | |               
            ------ 
this is found to be 
of type 
`std::process::Output`
197 | |             
Err(_) => { /* Fall 
through to libx264 */ 
},
    | |               
        ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^ 
expected `Output`, 
found `()`
198 | |         };
    | |_________- 
`match` arms have 
incompatible types

warning: value 
assigned to 
`durations_s` is 
never read
   --> 
src\exporter.rs:609:27
    |
609 |     let mut 
durations_s = 
Vec::new();
    |                 
          ^^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?
    = note: `#[warn(un
used_assignments)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `remain`
   --> 
src\exporter.rs:749:17
    |
749 |             let 
remain = duration_s - 
total_bg_s;
    |                 
^^^^^^ help: if this 
is intentional, 
prefix it with an 
underscore: `_remain`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: 
`timestamps_ms`
    --> 
src\exporter.rs:1591:5
     |
1591 |     
timestamps_ms: 
Vec<i32>,
     |     
^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_timestamps_ms`

warning: unused 
variable: 
`fade_duration_ms`
    --> 
src\exporter.rs:1594:5
     |
1594 |     
fade_duration_ms: i32,
     |     
^^^^^^^^^^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_fade_duration_ms`

warning: unused 
variable: 
`chunk_index`
    --> 
src\exporter.rs:1600:5
     |
1600 |     
chunk_index: 
Option<i32>,
     |     
^^^^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_chunk_index`

warning: unused 
variable: `blur`
    --> 
src\exporter.rs:1601:5
     |
1601 |     blur: 
Option<f64>,
     |     ^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: `_blur`

warning: unused 
variable: 
`is_high_fidelity`
    --> 
src\exporter.rs:1602:5
     |
1602 |     
is_high_fidelity: 
bool,
     |     
^^^^^^^^^^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_is_high_fidelity`

warning: unused 
variable: `app_handle`
    --> 
src\exporter.rs:1603:5
     |
1603 |     
app_handle: 
tauri::AppHandle,
     |     ^^^^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_app_handle`

Some errors have 
detailed 
explanations: E0061, 
E0282, E0308, E0425.
For more information 
about an error, try 
`rustc --explain 
E0061`.
warning: 
`qurancaption` (lib) 
generated 12 warnings
error: could not 
compile 
`qurancaption` (lib) 
due to 4 previous 
errors; 12 warnings 
emitted
